--- a/golang/Vagrantfile
+++ b/golang/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
 
     version = "1.3.3"
     hostname = "golang.box"
-    locale = "en_GB.UTF.8"
+    locale = "nb_NO.UTF.8"
 
     # Box
     config.vm.box = "trusty64"
