--- a/scala/Vagrantfile
+++ b/scala/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
     version_scala = "2.11.2"
     version_sbt = "0.13.6"
     hostname = "scala.box"
-    locale = "en_GB.UTF.8"
+    locale = "nb_NO.UTF.8"
 
     # Box
     config.vm.box = "trusty64"
