--- a/haskell/Vagrantfile
+++ b/haskell/Vagrantfile
@@ -4,7 +4,7 @@
 Vagrant.configure("2") do |config|
 
     hostname = "haskell.box"
-    locale = "nb_NO.UTF.8"
+    locale = "nb_NO.UTF-8"
 
     # Box
     config.vm.box = "trusty64"
