--- a/lua/Vagrantfile
+++ b/lua/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
 
     version = "5.2"
     hostname = "lua.box"
-    locale = "nb_NO.UTF.8"
+    locale = "nb_NO.UTF-8"
 
     # Box
     config.vm.box = "trusty64"
