--- a/ruby/Vagrantfile
+++ b/ruby/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
 
     version = "2.0.0"
     hostname = "ruby.box"
-    locale = "nb_NO.UTF.8"
+    locale = "nb_NO.UTF-8"
 
     # Box
     config.vm.box = "trusty64"
